--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @charset "utf-8";
 @import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');
 
+
 *{
 	margin: 0;
 	padding: 0;
@@ -8,9 +9,21 @@
 	font-family: 'Poppins', sans-serif;
 	scroll-behavior: smooth;
 }
+
 section{
 	padding: 100px;
 }
+
+/*---------------------Navigation Bar---------------------*/
+
+
+
+
+
+
+
+
+/*---------------------Opener Text Area---------------------*/
 .banner{
 	position: relative;
 	min-height: 100vh;
@@ -21,21 +34,41 @@ section{
 	justify-content: space-between;
 	align-items: center;
 }
+
 .banner h2{
-	font-size: 3em;
+	font-size: 3.5em;
 	color: white;
 	font-weight: 500;
 	line-height: 1.5em;
+	font-family: 'Consolas', sans-serif;
 }
 .banner h2 span{
-	font-size: 1.5em;
+	font-size: 2em;
 	font-weight: 700;
+	font-family: 'Consolas', sans-serif;
+	line-height: .8em;
 }
 .banner h3{
 	font-size: 1.5em;
 	color: white;
 	font-weight: 500;
+	font-family: 'Consolas', sans-serif;
+	line-height: 1.7em;
 }
+
+/*---------------------About Me---------------------*/
+
+
+
+
+
+
+
+
+
+
+
+
 .btn{
 	position: relative;
 	background: #2196f3;
@@ -82,7 +115,7 @@ header.sticky{
 }
 header .logo{
 	color: white;
-	font-size: 24px;
+	font-size: 30px;
 	text-transform: uppercase;
 	text-decoration: none;
 	font-weight: 700;
